deployment-2/dev/deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snocko-app-dev
  namespace: application-dev
spec:
  selector:
    matchLabels:
      app: snocko-app-dev
  replicas: 2
  template:
    metadata:
      labels:
        app: snocko-app-dev
    spec:
      containers:
      - name: snocko-app-dev
        image: public.ecr.aws/s7j8l1f2/snocko-test:90712b55742a4fb7dd9ffd16ad26556feb54598a
        ports:
        - containerPort: 8081
